Extract file to minio
